// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search render correctly with value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 54,
        "maxWidth": "95%",
        "paddingLeft": 18,
        "paddingRight": 12,
      },
      undefined,
    ]
  }
>
  <View />
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[MockFunction]}
    placeholder="Поиск"
    placeholderTextColor="#5E6678"
    style={
      Array [
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 22.5,
          "lineHeight": 28.5,
        },
        Object {
          "flex": 1,
          "padding": 0,
          "paddingHorizontal": 12,
        },
        undefined,
      ]
    }
    value="value"
  />
  <View
    accessibilityLabel="cancel"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#D1D4DB",
        "borderRadius": 96,
        "justifyContent": "center",
        "width": 36,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#5E6678",
          "fontFamily": "Neotis",
          "fontSize": 24,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Search render correctly without value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 54,
        "maxWidth": "95%",
        "paddingLeft": 18,
        "paddingRight": 12,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Object {
        "color": "#5E6678",
        "fontFamily": "Neotis",
        "fontSize": 36,
      }
    }
  >
    
  </Text>
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Поиск"
    placeholderTextColor="#5E6678"
    style={
      Array [
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 22.5,
          "lineHeight": 28.5,
        },
        Object {
          "flex": 1,
          "padding": 0,
          "paddingHorizontal": 12,
        },
        undefined,
      ]
    }
  />
</View>
`;
